责任链基本数据组件

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,6 +12,13 @@
     <groupId>com.anyn.messagePush.common</groupId>
     <artifactId>common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
