--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -12,6 +12,33 @@
     <groupId>com.anyn.messagePush.handler</groupId>
     <artifactId>handler</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.anyn.messagePush.common</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.anyn.messagePush.support</groupId>
+            <artifactId>support</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java-sms</artifactId>
+            <version>3.1.731</version>
+        </dependency>
+
+        <!--邮件发送-->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
