--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=8081
+spring.profiles.active=dev
+spring.application.name=MessagePush
+
+# Kafka
+MessagePush.business.topic.name=austinBusiness
+MessagePush.business.recall.topic.name=austinRecall
+MessagePush.business.log.topic.name=austinTraceLog
+MessagePush.business.recall.group.name=recallGroupId
+### TODO kafka tag filter,if you need, replace  tagIdValue ,eg:com.java3y.austin.yyy
+MessagePush.business.tagId.key=kafka_tag_id
+MessagePush.business.tagId.value=com.java3y.austin.3y
