--- a/service-impl/pom.xml
+++ b/service-impl/pom.xml
@@ -12,6 +12,21 @@
     <groupId>com.anyn.messagePush.service-impl</groupId>
     <artifactId>service-impl</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.anyn.messagePush.service</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.anyn.messagePush.support</groupId>
+            <artifactId>support</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
+
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
