--- a/support/pom.xml
+++ b/support/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>cn.monitor4all</groupId>
+            <artifactId>log-record-starter</artifactId>
+            <version>1.4.2</version>
+        </dependency>
     </dependencies>
 
     <properties>
